fixed zoom on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (max-width: 768px) {
+  textarea,
+  input,
+  select {
+    font-size: 16px !important;
+  }
+}
